--- a/css/style.css
+++ b/css/style.css
@@ -168,6 +168,12 @@ span {
   text-align: center;
 }
 
+.project-entry img {
+  width: 250px;
+  height:200px;
+}
+
+
 /* Media queries to handle various device widths */
 
 @media only screen and (max-width: 1024px) {
@@ -196,7 +202,8 @@ span {
 
 #map {
   display: block;
-  height: 100%;
+  height: 400px;
+  width: 100%;
   margin: 0 5%;
 }
 
