feat: add columns over 900px

--- a/css/style.css
+++ b/css/style.css
@@ -98,6 +98,12 @@ ul#footerContacts a {
   display: inline;
 }
 
+ul#topContacts a:hover,
+ul#footerContacts a:hover {
+  text-decoration: underline;
+}
+
+
 .welcome-message {
   font-style: italic;
   font-size: 18px;
@@ -182,6 +188,8 @@ span {
 
 /* Media queries to handle various device widths */
 
+
+
 @media only screen and (max-width: 1024px) {
   #lets-connect {
     margin-top: 5%;
@@ -208,8 +216,7 @@ span {
 
 #map {
   display: block;
-  height: 400px;
-  width: 100%;
+  height: 100%;
   margin: 0 5%;
 }
 
@@ -224,4 +231,37 @@ span {
   .biopic {
     display: block;
   }
+}
+
+@media only screen and (min-width: 900px) {
+
+  #workExperience,
+  #projects,
+  #education,
+  #mapDiv {
+    width: calc(50% - 22px);
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
+    margin-bottom: 20px;
+  }
+
+  /* #workExperience {
+    border-right: 2px dotted #4a4a4a;
+  }*/
+
+  #projects {
+    display: -webkit-flex;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+
+  #projects h2 {
+    width: 100%;
+  }
+
+  .project-entry {
+    width: 270px;
+  }
+
 }
