--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
 body,
 div,
+main,
+header,
+section,
 ul,
 li,
 p,
@@ -9,8 +12,8 @@ h3,
 h4,
 h5,
 h6 {
-  padding:0;
-  margin:0;
+  padding: 0;
+  margin: 0;
   font-family: "Roboto", sans-serif;
 }
 
@@ -57,8 +60,7 @@ h2,
 h3,
 h4,
 h5 {
-  padding:10px 5%;
-
+  padding: 10px 5%;
 }
 
 .map-info{
@@ -108,13 +110,15 @@ ul#footerContacts a {
   display: inline;
 }
 
+#githubFeed a {
+  display: inline;
+}
+
 ul#topContacts a:hover,
 ul#footerContacts a:hover,
 a.course-url:hover {
   border-bottom: 1px dotted #f5ae23;
 }
-
-
 
 .welcome-message {
   font-style: italic;
@@ -144,14 +148,13 @@ a.course-url:hover {
 .gray {
   background-color: #f3f3f3;
   padding-bottom: 10px;
-  clear:both;
+  clear: both;
 }
 
 .dark-gray {
   background-color: #4a4a4a;
 }
 
-/* TODO: Replace with image later */
 #header {
   background-color: #484848;
 }
@@ -199,14 +202,47 @@ span {
 
 .project-entry img {
   width: 250px;
-  height:200px;
+  height: 200px;
 }
 
+#map {
+  display: block;
+  height: 100%;
+  margin: 0 5% 20px 5%;
+}
+
+#mapDiv {
+  height: 400px;
+  width: 100%;
+  padding-bottom: 8%;
+}
+
+#githubFeed {
+  font-size: 0.9em;
+}
+
+#githubFeed img {
+  display: none;
+}
+
+#githubFeed p {
+  padding: 0 5%;
+}
+
+#githubFeed span {
+  display: none;
+}
+
+#githubFeed blockquote {
+  font-family: monospace;
+  margin-top: 0;
+}
+
+#githubFeedContent {
+  padding: 0 5%;
+}
 
 /* Media queries to handle various device widths */
-
-
-
 @media only screen and (max-width: 1024px) {
   #lets-connect {
     margin-top: 5%;
@@ -231,18 +267,6 @@ span {
   }
 }
 
-#map {
-  display: block;
-  height: 100%;
-  margin: 0 5% 20px 5%;
-}
-
-#mapDiv {
-  height: 400px;
-  width: 100%;
-  padding-bottom: 8%;
-}
-
 @media only screen and (min-width: 750px) {
   #skills-h3,
   .biopic {
@@ -257,7 +281,8 @@ span {
 
   #workExperience,
   #projects,
-  #education {
+  #education,
+  #githubFeed {
     width: calc(50% - 22px);
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
     margin-bottom: 20px;
@@ -281,13 +306,12 @@ span {
   .project-entry {
     width: 270px;
   }
-
 }
 
 @media only screen and (min-width: 1025px) {
-  div.#main {
+  main {
     margin-left: auto;
-    margin-right:auto;
+    margin-right: auto;
     width: 1024px;
   }
-
+}
