--- a/css/style.css
+++ b/css/style.css
@@ -160,7 +160,6 @@ a.course-url:hover {
 }
 
 .flex-box {
-  display: -webkit-flex;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -207,7 +206,7 @@ span {
 
 #map {
   display: block;
-  height: 100%;
+  height: calc(100% - 44px);
   margin: 0 5% 20px 5%;
 }
 
@@ -249,7 +248,7 @@ span {
   }
 }
 
-@media only screen and (max-width:900px) {
+@media only screen and (max-width: 900px) {
   .biopic {
     width: 175px;
   }
@@ -279,20 +278,29 @@ span {
     margin-bottom: 20px;
   }
 
+
   #workExperience,
   #projects,
-  #education,
-  #githubFeed {
+  #education {
     width: calc(50% - 22px);
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
     margin-bottom: 20px;
     padding-bottom: 10px;
   }
 
-  #mapDiv {
+  #interactive{
     width: calc(50% - 22px);
+    margin-bottom: 20px;
+  }
+
+  #mapDiv{
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
     margin-bottom: 20px;
+  }
+
+  #githubFeed {
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.26);
+    padding-bottom: 10px;
   }
 
   #projects {
